# RustCrud

./: .~lock.Transaction_Template.csv#  Cargo.toml  Transaction_Template.csv  example_patterns.txt
src/: main.rs
