[package]
name = "csv_upload_test"
version = "0.1.0"
authors = ["kempchee <fotingkempchee@gmail.com>"]

[dependencies]
postgres ="*"
iron = "*"
rustc-serialize = "0.3"
router ="*"
hyper="*"
unicase="*"
csv="*"
chrono="*"
time="*"
bodyparser="*"
regex = "*"
urlencoded="*"
websocket="*"
[dependencies.persistent]
git = "https://github.com/iron/persistent.git"
